compiler_construction/2019 HW/Compiler_F74056247_HW2/y.output
Terminals unused in grammar

   AND
   OR
   NOT
   LSB
   RSB
   FOR


State 34 conflicts: 7 shift/reduce
State 35 conflicts: 7 shift/reduce
State 84 conflicts: 1 shift/reduce
State 86 conflicts: 7 shift/reduce
State 87 conflicts: 7 shift/reduce
State 88 conflicts: 7 shift/reduce
State 89 conflicts: 7 shift/reduce
State 90 conflicts: 7 shift/reduce
State 92 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program statements
    2        | statements

    3 statements: statement
    4           | function_declaration

    5 statement: declaration_statement SEMICOLON
    6          | expression_statement
    7          | if_statement
    8          | while_statement

    9 declaration_statement: type ID ASGN arithmetic_statement
   10                      | type ID
   11                      | declaration_statement COMMA ID
   12                      | declaration_statement COMMA ID ASGN arithmetic_statement
   13                      | declaration_statement COMMA declaration_statement

   14 arithmetic_statement: LB arithmetic_statement RB
   15                     | arithmetic_statement ADD arithmetic_statement
   16                     | arithmetic_statement SUB arithmetic_statement
   17                     | arithmetic_statement MUL arithmetic_statement
   18                     | arithmetic_statement DIV arithmetic_statement
   19                     | arithmetic_statement MOD arithmetic_statement
   20                     | INC arithmetic_statement
   21                     | DEC arithmetic_statement
   22                     | arithmetic_statement INC
   23                     | arithmetic_statement DEC
   24                     | value

   25 expression_statement: assignment_statement SEMICOLON
   26                     | execution_statement SEMICOLON
   27                     | arithmetic_statement SEMICOLON
   28                     | RETURN arithmetic_statement SEMICOLON
   29                     | RETURN SEMICOLON

   30 assignment_statement: ID ASGN arithmetic_statement
   31                     | ID ADDASGN arithmetic_statement
   32                     | ID SUBASGN arithmetic_statement
   33                     | ID MULASGN arithmetic_statement
   34                     | ID DIVASGN arithmetic_statement
   35                     | ID MODASGN arithmetic_statement
   36                     | assignment_statement COMMA assignment_statement

   37 execution_statement: PRINT LB argument_list RB
   38                    | ID LB argument_list RB
   39                    | ID LB RB

   40 argument_list: value
   41              | value COMMA argument_list

   42 value: I_CONST
   43      | F_CONST
   44      | TRUE
   45      | FALSE
   46      | STRING_LITERAL
   47      | ID

   48 function_declaration: function_parameter function_scope
   49                     | function_parameter SEMICOLON

   50 function_parameter: type ID LB parameter_list RB
   51                   | type ID LB RB

   52 parameter_list: type ID
   53               | parameter_list COMMA type ID

   54 function_scope: LCB program RCB

   55 if_statement: IF LB condition RB function_scope
   56             | IF LB condition RB function_scope else_statement
   57             | IF LB condition RB SEMICOLON

   58 else_statement: ELSE if_statement
   59               | ELSE function_scope

   60 while_statement: WHILE LB condition RB function_scope
   61                | WHILE LB condition RB SEMICOLON

   62 condition: arithmetic_statement comparaters arithmetic_statement
   63          | arithmetic_statement

   64 comparaters: EQ
   65            | LT
   66            | LTE
   67            | MT
   68            | MTE
   69            | NE

   70 type: VOID
   71     | BOOL
   72     | FLOAT
   73     | INT
   74     | STRING


Terminals, with rules where they appear

$end (0) 0
error (256)
ADD (258) 15
SUB (259) 16
MUL (260) 17
DIV (261) 18
MOD (262) 19
INC (263) 20 22
DEC (264) 21 23
MT (265) 67
LT (266) 65
MTE (267) 68
LTE (268) 66
EQ (269) 64
NE (270) 69
ASGN (271) 9 12 30
ADDASGN (272) 31
SUBASGN (273) 32
MULASGN (274) 33
DIVASGN (275) 34
MODASGN (276) 35
AND (277)
OR (278)
NOT (279)
LB (280) 14 37 38 39 50 51 55 56 57 60 61
RB (281) 14 37 38 39 50 51 55 56 57 60 61
LCB (282) 54
RCB (283) 54
LSB (284)
RSB (285)
COMMA (286) 11 12 13 36 41 53
PRINT (287) 37
IF (288) 55 56 57
ELSE (289) 58 59
FOR (290)
WHILE (291) 60 61
VOID (292) 70
INT (293) 73
FLOAT (294) 72
STRING (295) 74
BOOL (296) 71
TRUE (297) 44
FALSE (298) 45
RETURN (299) 28 29
SEMICOLON (300) 5 25 26 27 28 29 49 57 61
I_CONST (301) 42
F_CONST (302) 43
STRING_LITERAL (303) 46
ID (304) 9 10 11 12 30 31 32 33 34 35 38 39 47 50 51 52 53


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
program (51)
    on left: 1 2, on right: 0 1 54
statements (52)
    on left: 3 4, on right: 1 2
statement (53)
    on left: 5 6 7 8, on right: 3
declaration_statement (54)
    on left: 9 10 11 12 13, on right: 5 11 12 13
arithmetic_statement (55)
    on left: 14 15 16 17 18 19 20 21 22 23 24, on right: 9 12 14 15
    16 17 18 19 20 21 22 23 27 28 30 31 32 33 34 35 62 63
expression_statement (56)
    on left: 25 26 27 28 29, on right: 6
assignment_statement (57)
    on left: 30 31 32 33 34 35 36, on right: 25 36
execution_statement (58)
    on left: 37 38 39, on right: 26
argument_list (59)
    on left: 40 41, on right: 37 38 41
value (60)
    on left: 42 43 44 45 46 47, on right: 24 40 41
function_declaration (61)
    on left: 48 49, on right: 4
function_parameter (62)
    on left: 50 51, on right: 48 49
parameter_list (63)
    on left: 52 53, on right: 50 53
function_scope (64)
    on left: 54, on right: 48 55 56 59 60
if_statement (65)
    on left: 55 56 57, on right: 7 58
else_statement (66)
    on left: 58 59, on right: 56
while_statement (67)
    on left: 60 61, on right: 8
condition (68)
    on left: 62 63, on right: 55 56 57 60 61
comparaters (69)
    on left: 64 65 66 67 68 69, on right: 62
type (70)
    on left: 70 71 72 73 74, on right: 9 10 50 51 52 53


State 0

    0 $accept: . program $end

    INC             shift, and go to state 1
    DEC             shift, and go to state 2
    LB              shift, and go to state 3
    PRINT           shift, and go to state 4
    IF              shift, and go to state 5
    WHILE           shift, and go to state 6
    VOID            shift, and go to state 7
    INT             shift, and go to state 8
    FLOAT           shift, and go to state 9
    STRING          shift, and go to state 10
    BOOL            shift, and go to state 11
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    RETURN          shift, and go to state 14
    I_CONST         shift, and go to state 15
    F_CONST         shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    ID              shift, and go to state 18

    program                go to state 19
    statements             go to state 20
    statement              go to state 21
    declaration_statement  go to state 22
    arithmetic_statement   go to state 23
    expression_statement   go to state 24
    assignment_statement   go to state 25
    execution_statement    go to state 26
    value                  go to state 27
    function_declaration   go to state 28
    function_parameter     go to state 29
    if_statement           go to state 30
    while_statement        go to state 31
    type                   go to state 32


State 1

   20 arithmetic_statement: INC . arithmetic_statement

    INC             shift, and go to state 1
    DEC             shift, and go to state 2
    LB              shift, and go to state 3
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    I_CONST         shift, and go to state 15
    F_CONST         shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    ID              shift, and go to state 33

    arithmetic_statement  go to state 34
    value                 go to state 27


State 2

   21 arithmetic_statement: DEC . arithmetic_statement

    INC             shift, and go to state 1
    DEC             shift, and go to state 2
    LB              shift, and go to state 3
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    I_CONST         shift, and go to state 15
    F_CONST         shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    ID              shift, and go to state 33

    arithmetic_statement  go to state 35
    value                 go to state 27


State 3

   14 arithmetic_statement: LB . arithmetic_statement RB

    INC             shift, and go to state 1
    DEC             shift, and go to state 2
    LB              shift, and go to state 3
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    I_CONST         shift, and go to state 15
    F_CONST         shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    ID              shift, and go to state 33

    arithmetic_statement  go to state 36
    value                 go to state 27


State 4

   37 execution_statement: PRINT . LB argument_list RB

    LB  shift, and go to state 37


State 5

   55 if_statement: IF . LB condition RB function_scope
   56             | IF . LB condition RB function_scope else_statement
   57             | IF . LB condition RB SEMICOLON

    LB  shift, and go to state 38


State 6

   60 while_statement: WHILE . LB condition RB function_scope
   61                | WHILE . LB condition RB SEMICOLON

    LB  shift, and go to state 39


State 7

   70 type: VOID .

    $default  reduce using rule 70 (type)


State 8

   73 type: INT .

    $default  reduce using rule 73 (type)


State 9

   72 type: FLOAT .

    $default  reduce using rule 72 (type)


State 10

   74 type: STRING .

    $default  reduce using rule 74 (type)


State 11

   71 type: BOOL .

    $default  reduce using rule 71 (type)


State 12

   44 value: TRUE .

    $default  reduce using rule 44 (value)


State 13

   45 value: FALSE .

    $default  reduce using rule 45 (value)


State 14

   28 expression_statement: RETURN . arithmetic_statement SEMICOLON
   29                     | RETURN . SEMICOLON

    INC             shift, and go to state 1
    DEC             shift, and go to state 2
    LB              shift, and go to state 3
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    SEMICOLON       shift, and go to state 40
    I_CONST         shift, and go to state 15
    F_CONST         shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    ID              shift, and go to state 33

    arithmetic_statement  go to state 41
    value                 go to state 27


State 15

   42 value: I_CONST .

    $default  reduce using rule 42 (value)


State 16

   43 value: F_CONST .

    $default  reduce using rule 43 (value)


State 17

   46 value: STRING_LITERAL .

    $default  reduce using rule 46 (value)


State 18

   30 assignment_statement: ID . ASGN arithmetic_statement
   31                     | ID . ADDASGN arithmetic_statement
   32                     | ID . SUBASGN arithmetic_statement
   33                     | ID . MULASGN arithmetic_statement
   34                     | ID . DIVASGN arithmetic_statement
   35                     | ID . MODASGN arithmetic_statement
   38 execution_statement: ID . LB argument_list RB
   39                    | ID . LB RB
   47 value: ID .

    ASGN     shift, and go to state 42
    ADDASGN  shift, and go to state 43
    SUBASGN  shift, and go to state 44
    MULASGN  shift, and go to state 45
    DIVASGN  shift, and go to state 46
    MODASGN  shift, and go to state 47
    LB       shift, and go to state 48

    $default  reduce using rule 47 (value)


State 19

    0 $accept: program . $end
    1 program: program . statements

    $end            shift, and go to state 49
    INC             shift, and go to state 1
    DEC             shift, and go to state 2
    LB              shift, and go to state 3
    PRINT           shift, and go to state 4
    IF              shift, and go to state 5
    WHILE           shift, and go to state 6
    VOID            shift, and go to state 7
    INT             shift, and go to state 8
    FLOAT           shift, and go to state 9
    STRING          shift, and go to state 10
    BOOL            shift, and go to state 11
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    RETURN          shift, and go to state 14
    I_CONST         shift, and go to state 15
    F_CONST         shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    ID              shift, and go to state 18

    statements             go to state 50
    statement              go to state 21
    declaration_statement  go to state 22
    arithmetic_statement   go to state 23
    expression_statement   go to state 24
    assignment_statement   go to state 25
    execution_statement    go to state 26
    value                  go to state 27
    function_declaration   go to state 28
    function_parameter     go to state 29
    if_statement           go to state 30
    while_statement        go to state 31
    type                   go to state 32


State 20

    2 program: statements .

    $default  reduce using rule 2 (program)


State 21

    3 statements: statement .

    $default  reduce using rule 3 (statements)


State 22

    5 statement: declaration_statement . SEMICOLON
   11 declaration_statement: declaration_statement . COMMA ID
   12                      | declaration_statement . COMMA ID ASGN arithmetic_statement
   13                      | declaration_statement . COMMA declaration_statement

    COMMA      shift, and go to state 51
    SEMICOLON  shift, and go to state 52


State 23

   15 arithmetic_statement: arithmetic_statement . ADD arithmetic_statement
   16                     | arithmetic_statement . SUB arithmetic_statement
   17                     | arithmetic_statement . MUL arithmetic_statement
   18                     | arithmetic_statement . DIV arithmetic_statement
   19                     | arithmetic_statement . MOD arithmetic_statement
   22                     | arithmetic_statement . INC
   23                     | arithmetic_statement . DEC
   27 expression_statement: arithmetic_statement . SEMICOLON

    ADD        shift, and go to state 53
    SUB        shift, and go to state 54
    MUL        shift, and go to state 55
    DIV        shift, and go to state 56
    MOD        shift, and go to state 57
    INC        shift, and go to state 58
    DEC        shift, and go to state 59
    SEMICOLON  shift, and go to state 60


State 24

    6 statement: expression_statement .

    $default  reduce using rule 6 (statement)


State 25

   25 expression_statement: assignment_statement . SEMICOLON
   36 assignment_statement: assignment_statement . COMMA assignment_statement

    COMMA      shift, and go to state 61
    SEMICOLON  shift, and go to state 62


State 26

   26 expression_statement: execution_statement . SEMICOLON

    SEMICOLON  shift, and go to state 63


State 27

   24 arithmetic_statement: value .

    $default  reduce using rule 24 (arithmetic_statement)


State 28

    4 statements: function_declaration .

    $default  reduce using rule 4 (statements)


State 29

   48 function_declaration: function_parameter . function_scope
   49                     | function_parameter . SEMICOLON

    LCB        shift, and go to state 64
    SEMICOLON  shift, and go to state 65

    function_scope  go to state 66


State 30

    7 statement: if_statement .

    $default  reduce using rule 7 (statement)


State 31

    8 statement: while_statement .

    $default  reduce using rule 8 (statement)


State 32

    9 declaration_statement: type . ID ASGN arithmetic_statement
   10                      | type . ID
   50 function_parameter: type . ID LB parameter_list RB
   51                   | type . ID LB RB

    ID  shift, and go to state 67


State 33

   47 value: ID .

    $default  reduce using rule 47 (value)


State 34

   15 arithmetic_statement: arithmetic_statement . ADD arithmetic_statement
   16                     | arithmetic_statement . SUB arithmetic_statement
   17                     | arithmetic_statement . MUL arithmetic_statement
   18                     | arithmetic_statement . DIV arithmetic_statement
   19                     | arithmetic_statement . MOD arithmetic_statement
   20                     | INC arithmetic_statement .
   22                     | arithmetic_statement . INC
   23                     | arithmetic_statement . DEC

    ADD  shift, and go to state 53
    SUB  shift, and go to state 54
    MUL  shift, and go to state 55
    DIV  shift, and go to state 56
    MOD  shift, and go to state 57
    INC  shift, and go to state 58
    DEC  shift, and go to state 59

    ADD       [reduce using rule 20 (arithmetic_statement)]
    SUB       [reduce using rule 20 (arithmetic_statement)]
    MUL       [reduce using rule 20 (arithmetic_statement)]
    DIV       [reduce using rule 20 (arithmetic_statement)]
    MOD       [reduce using rule 20 (arithmetic_statement)]
    INC       [reduce using rule 20 (arithmetic_statement)]
    DEC       [reduce using rule 20 (arithmetic_statement)]
    $default  reduce using rule 20 (arithmetic_statement)


State 35

   15 arithmetic_statement: arithmetic_statement . ADD arithmetic_statement
   16                     | arithmetic_statement . SUB arithmetic_statement
   17                     | arithmetic_statement . MUL arithmetic_statement
   18                     | arithmetic_statement . DIV arithmetic_statement
   19                     | arithmetic_statement . MOD arithmetic_statement
   21                     | DEC arithmetic_statement .
   22                     | arithmetic_statement . INC
   23                     | arithmetic_statement . DEC

    ADD  shift, and go to state 53
    SUB  shift, and go to state 54
    MUL  shift, and go to state 55
    DIV  shift, and go to state 56
    MOD  shift, and go to state 57
    INC  shift, and go to state 58
    DEC  shift, and go to state 59

    ADD       [reduce using rule 21 (arithmetic_statement)]
    SUB       [reduce using rule 21 (arithmetic_statement)]
    MUL       [reduce using rule 21 (arithmetic_statement)]
    DIV       [reduce using rule 21 (arithmetic_statement)]
    MOD       [reduce using rule 21 (arithmetic_statement)]
    INC       [reduce using rule 21 (arithmetic_statement)]
    DEC       [reduce using rule 21 (arithmetic_statement)]
    $default  reduce using rule 21 (arithmetic_statement)


State 36

   14 arithmetic_statement: LB arithmetic_statement . RB
   15                     | arithmetic_statement . ADD arithmetic_statement
   16                     | arithmetic_statement . SUB arithmetic_statement
   17                     | arithmetic_statement . MUL arithmetic_statement
   18                     | arithmetic_statement . DIV arithmetic_statement
   19                     | arithmetic_statement . MOD arithmetic_statement
   22                     | arithmetic_statement . INC
   23                     | arithmetic_statement . DEC

    ADD  shift, and go to state 53
    SUB  shift, and go to state 54
    MUL  shift, and go to state 55
    DIV  shift, and go to state 56
    MOD  shift, and go to state 57
    INC  shift, and go to state 58
    DEC  shift, and go to state 59
    RB   shift, and go to state 68


State 37

   37 execution_statement: PRINT LB . argument_list RB

    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    I_CONST         shift, and go to state 15
    F_CONST         shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    ID              shift, and go to state 33

    argument_list  go to state 69
    value          go to state 70


State 38

   55 if_statement: IF LB . condition RB function_scope
   56             | IF LB . condition RB function_scope else_statement
   57             | IF LB . condition RB SEMICOLON

    INC             shift, and go to state 1
    DEC             shift, and go to state 2
    LB              shift, and go to state 3
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    I_CONST         shift, and go to state 15
    F_CONST         shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    ID              shift, and go to state 33

    arithmetic_statement  go to state 71
    value                 go to state 27
    condition             go to state 72


State 39

   60 while_statement: WHILE LB . condition RB function_scope
   61                | WHILE LB . condition RB SEMICOLON

    INC             shift, and go to state 1
    DEC             shift, and go to state 2
    LB              shift, and go to state 3
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    I_CONST         shift, and go to state 15
    F_CONST         shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    ID              shift, and go to state 33

    arithmetic_statement  go to state 71
    value                 go to state 27
    condition             go to state 73


State 40

   29 expression_statement: RETURN SEMICOLON .

    $default  reduce using rule 29 (expression_statement)


State 41

   15 arithmetic_statement: arithmetic_statement . ADD arithmetic_statement
   16                     | arithmetic_statement . SUB arithmetic_statement
   17                     | arithmetic_statement . MUL arithmetic_statement
   18                     | arithmetic_statement . DIV arithmetic_statement
   19                     | arithmetic_statement . MOD arithmetic_statement
   22                     | arithmetic_statement . INC
   23                     | arithmetic_statement . DEC
   28 expression_statement: RETURN arithmetic_statement . SEMICOLON

    ADD        shift, and go to state 53
    SUB        shift, and go to state 54
    MUL        shift, and go to state 55
    DIV        shift, and go to state 56
    MOD        shift, and go to state 57
    INC        shift, and go to state 58
    DEC        shift, and go to state 59
    SEMICOLON  shift, and go to state 74


State 42

   30 assignment_statement: ID ASGN . arithmetic_statement

    INC             shift, and go to state 1
    DEC             shift, and go to state 2
    LB              shift, and go to state 3
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    I_CONST         shift, and go to state 15
    F_CONST         shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    ID              shift, and go to state 33

    arithmetic_statement  go to state 75
    value                 go to state 27


State 43

   31 assignment_statement: ID ADDASGN . arithmetic_statement

    INC             shift, and go to state 1
    DEC             shift, and go to state 2
    LB              shift, and go to state 3
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    I_CONST         shift, and go to state 15
    F_CONST         shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    ID              shift, and go to state 33

    arithmetic_statement  go to state 76
    value                 go to state 27


State 44

   32 assignment_statement: ID SUBASGN . arithmetic_statement

    INC             shift, and go to state 1
    DEC             shift, and go to state 2
    LB              shift, and go to state 3
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    I_CONST         shift, and go to state 15
    F_CONST         shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    ID              shift, and go to state 33

    arithmetic_statement  go to state 77
    value                 go to state 27


State 45

   33 assignment_statement: ID MULASGN . arithmetic_statement

    INC             shift, and go to state 1
    DEC             shift, and go to state 2
    LB              shift, and go to state 3
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    I_CONST         shift, and go to state 15
    F_CONST         shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    ID              shift, and go to state 33

    arithmetic_statement  go to state 78
    value                 go to state 27


State 46

   34 assignment_statement: ID DIVASGN . arithmetic_statement

    INC             shift, and go to state 1
    DEC             shift, and go to state 2
    LB              shift, and go to state 3
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    I_CONST         shift, and go to state 15
    F_CONST         shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    ID              shift, and go to state 33

    arithmetic_statement  go to state 79
    value                 go to state 27


State 47

   35 assignment_statement: ID MODASGN . arithmetic_statement

    INC             shift, and go to state 1
    DEC             shift, and go to state 2
    LB              shift, and go to state 3
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    I_CONST         shift, and go to state 15
    F_CONST         shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    ID              shift, and go to state 33

    arithmetic_statement  go to state 80
    value                 go to state 27


State 48

   38 execution_statement: ID LB . argument_list RB
   39                    | ID LB . RB

    RB              shift, and go to state 81
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    I_CONST         shift, and go to state 15
    F_CONST         shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    ID              shift, and go to state 33

    argument_list  go to state 82
    value          go to state 70


State 49

    0 $accept: program $end .

    $default  accept


State 50

    1 program: program statements .

    $default  reduce using rule 1 (program)


State 51

   11 declaration_statement: declaration_statement COMMA . ID
   12                      | declaration_statement COMMA . ID ASGN arithmetic_statement
   13                      | declaration_statement COMMA . declaration_statement
